Bug 142638 - CRASH: leaving embedded object (GTK3)
Summary: CRASH: leaving embedded object (GTK3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2021-06-03 13:55 UTC by Xisco Faulí
Modified: 2021-06-04 15:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (12.55 KB, text/plain)
2021-06-03 19:45 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-06-03 13:55:06 UTC
Steps to reproduce:
1. Open attachment 172417 [details] from bug 142546
2. Double click on the embedded object
3. Click somewhere outside the embedded object

-> Crash

Reproduced in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 8771f48512ed19197c17506f522578f43b092b21
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-06-03 13:55:55 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8d485ec0cd35ee1ae7684f2b6ca96c0f0c6f9dac

author	Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-29 08:34:28 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-29 13:37:25 +0200
commit 8d485ec0cd35ee1ae7684f2b6ca96c0f0c6f9dac (patch)
tree 73b645a8b6c5976c29a83908ac3be49744ddcbb0
parent 30aa33e6a6b9fb230af96f619db27fcaf31ef914 (diff)
IsDisposed->isDisposed in vcl/../window

Bisected with: bibisect-linux64-7.2

Adding CC: to Noel Grandin
Comment 2 Julien Nabet 2021-06-03 19:45:16 UTC
Created attachment 172599 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Commit Notification 2021-06-04 13:34:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e4514e65399a1e0398ef94efed6fa1774cff7ea6

tdf#142638 crash leaving embedded object (GTK3)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2021-06-04 15:14:12 UTC
With master sources updated today, I confirm I can't reproduce this anymore.

Thank you Noel! :-)