tdf#142638 crash leaving embedded object (GTK3)

regression from
    commit 8d485ec0cd35ee1ae7684f2b6ca96c0f0c6f9dac
    Date:   Sat May 29 08:34:28 2021 +0200
    IsDisposed->isDisposed in vcl/../window

Change-Id: I9bca182d7d7c4abf4c308bad44c0a3a0bb04a716